Update ANN TPL:
------------------------------------------------------------------------
r2781 | briadam | 2016-05-23 17:39:35 -0600 (Mon, 23 May 2016) | 1 line

ANN: remove DLL_API macro from 4 function definitions (leaving on their declarations) to enable Windows builds.
------------------------------------------------------------------------
r2780 | jasteph | 2016-05-19 14:03:35 -0600 (Thu, 19 May 2016) | 1 line

Unborking packaging by removing reference to nonexistent header. Request review by BMA.

--- a/ann/src/CMakeLists.txt
+++ b/ann/src/CMakeLists.txt
@@ -16,7 +16,7 @@ set(ANN_SOURCES
 
 set(ANN_HEADERS
   kd_tree.h kd_split.h kd_util.h kd_search.h
-  kd_pr_search.h kd_fix_rad_search.h perf.h pr_queue.h pr_queue_k.h
+  kd_pr_search.h kd_fix_rad_search.h pr_queue.h pr_queue_k.h
   )
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)
