CMake build system updates for queso-0.56.0
 * Slightly better generated header information now that no
   autotools-generated files.

 * Add necessary Boost definitions for Dakota

 * Include getpot.h in build tree includes

Update for getpot

--- a/queso/CMakeLists.txt
+++ b/queso/CMakeLists.txt
@@ -34,14 +34,39 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config_queso.h.cmake.in
 # Set the defines we think are used from config_queso.h
 #add_definitions("-DQUESO_HAVE_BOOST")...
 # TODO: consider managing these at top-level to keep in sync with dakota/src
+# TODO: consider adding 
+#   QUESO_HAVE_BOOST
+#   QUESO_HAVE_BOOST_PROGRAM_OPTIONS_HPP
 add_definitions("-DQUESO_HAVE_BOOST_SCOPED_PTR_HPP")
+add_definitions("-DQUESO_HAVE_BOOST_SHARED_PTR_HPP")
+# Technically satisfy these with old compilers, but CXX11 name gives pause:
+# QUESO_HAVE_CXX11_ISFINITE/ISNAN
+add_definitions("-DQUESO_HAVE_BOOST_MATH_SPECIAL_FUNCTIONS_HPP")
 if(DAKOTA_HAVE_MPI)
   add_definitions("-DQUESO_HAVE_MPI")
 endif()
 
-set(GENERIC_MAJOR_VERSION 1)
-set(GENERIC_MINOR_VERSION 50)
+# Definitions used by queso.h.in
+set(GENERIC_MAJOR_VERSION 0)
+set(GENERIC_MINOR_VERSION 56)
 set(GENERIC_MICRO_VERSION 0)
+
+set(BUILD_USER "anonymous")
+set(BUILD_ARCH "${CMAKE_SYSTEM_PROCESSOR}")
+#set(BUILD_HOST "${CMAKE_SYSTEM_NAME}")
+set(BUILD_HOST "unknown")
+# TODO: embed data when using CMake 2.8.12 or newer
+set(BUILD_DATE "YYYY-MM-DD HH:MM")
+# TODO: short SHA1:
+set(BUILD_VERSION "")
+set(VERSION 
+  "${GENERIC_MAJOR_VERSION}.${GENERIC_MINOR_VERSION}.${GENERIC_MICRO_VERSION}")
+set(BUILD_DEVSTATUS "Development Build")
+set(CXX "${CMAKE_CXX_COMPILER}")
+# Following should depend on build type
+set(CXXFLAGS "${CMAKE_CXX_FLAGS}")
+
+set(GSL_LIBS ${GSL_LIBRARY_DIRS})
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/src/core/inc/queso.h.in 
   ${CMAKE_CURRENT_BINARY_DIR}/include/queso/queso.h)
@@ -87,6 +112,9 @@ foreach(queso_subdir basic core misc stats gp surrogates)
   #target_link_libraries(queso_${queso_subdir} ${Boost_LIBRARIES})
 
 endforeach()
+
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/src/contrib/getpot/getpot.h 
+  ${CMAKE_CURRENT_BINARY_DIR}/include/queso/ COPYONLY)
 
 # Add one library in total
 add_library(queso ${queso_sources})
