Initial pass at improving QUESO configured headers
Mirror autotools-generated headers instead of using add_definition, in
hopes of keeping Dakota and QUESO better synced up.

Initial cut handles build info, some headers, and a few options.

--- a/queso/CMakeLists.txt
+++ b/queso/CMakeLists.txt
@@ -1,10 +1,9 @@
 # Experimental QUESO CMake that builds only the sources (no tests,
-# examples, etc.); for testing purposes only.  Does not properly
-# manage various QUESO build/conditional compile settings.
-#
+# examples, etc.).  Does not properly manage all QUESO
+# build/conditional compile settings.
+
 cmake_minimum_required(VERSION 2.8.9)
 project(Queso CXX)
-
 
 # -----
 # Required packages
@@ -19,34 +18,49 @@ project(Queso CXX)
 if(NOT Boost_FOUND)
   find_package(Boost 1.44 REQUIRED COMPONENTS program_options)
 endif()
+
 find_package(GSL REQUIRED) # Version 1.15 or newer?
+# Required by queso.h.in (cannot prefix with QUESO_)
+set(GSL_LIBS ${GSL_LIBRARY_DIRS})
 
 
 # -----
-# Generated headers
+# CMake defines for generated headers
 # -----
 
-# Fake out includes with empty file
-file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include/queso)
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config_queso.h.cmake.in 
-  ${CMAKE_CURRENT_BINARY_DIR}/include/queso/config_queso.h COPYONLY)
-
-# Set the defines we think are used from config_queso.h
-#add_definitions("-DQUESO_HAVE_BOOST")...
-# TODO: consider managing these at top-level to keep in sync with dakota/src
-# TODO: consider adding 
-#   QUESO_HAVE_BOOST
-#   QUESO_HAVE_BOOST_PROGRAM_OPTIONS_HPP
-add_definitions("-DQUESO_HAVE_BOOST_SCOPED_PTR_HPP")
-add_definitions("-DQUESO_HAVE_BOOST_SHARED_PTR_HPP")
-# Technically satisfy these with old compilers, but CXX11 name gives pause:
-# QUESO_HAVE_CXX11_ISFINITE/ISNAN
-add_definitions("-DQUESO_HAVE_BOOST_MATH_SPECIAL_FUNCTIONS_HPP")
 if(DAKOTA_HAVE_MPI)
-  add_definitions("-DQUESO_HAVE_MPI")
+  set(QUESO_HAVE_MPI 1)
 endif()
 
-# Definitions used by queso.h.in
+# Boost options
+# One CMake option QUESO_HAVE_BOOST to control all the following
+#  QUESO_HAVE_BOOST
+#  QUESO_HAVE_BOOST_MATH_SPECIAL_FUNCTIONS_HPP
+#  QUESO_HAVE_BOOST_PROGRAM_OPTIONS_HPP
+#  QUESO_HAVE_BOOST_SCOPED_PTR_HPP
+#  QUESO_HAVE_BOOST_SHARED_PTR_HPP
+set(QUESO_HAVE_BOOST 1)
+
+
+# TODO: Check for C++11 support once using CMake 3.x (CXX_STANDARD)
+
+
+# Check for include files
+include(CheckIncludeFile)
+check_include_file("dlfcn.h" QUESO_HAVE_DLFCN_H)
+check_include_file("stdint.h" QUESO_HAVE_STDINT_H)
+
+# TODO: Add other include files from config_queso.h.cmake.in
+
+
+# -----
+# Build Information
+# Definitions used by queso.h.in and config_queso.h.cmake.in
+# -----
+
+# TODO: see if we can get upstream to consolidate the two configured
+# header files
+
 set(GENERIC_MAJOR_VERSION 0)
 set(GENERIC_MINOR_VERSION 56)
 set(GENERIC_MICRO_VERSION 0)
@@ -55,21 +69,32 @@ set(BUILD_USER "anonymous")
 set(BUILD_ARCH "${CMAKE_SYSTEM_PROCESSOR}")
 #set(BUILD_HOST "${CMAKE_SYSTEM_NAME}")
 set(BUILD_HOST "unknown")
-# TODO: embed data when using CMake 2.8.12 or newer
-set(BUILD_DATE "YYYY-MM-DD HH:MM")
-# TODO: short SHA1:
-set(BUILD_VERSION "")
+# this deviates from QUEOS, which uses a static build date in queso.h,
+# but dynamic in config_queso.h; need to embed the quotes for macro
+# expansion
+# TODO: embed date when using CMake 2.8.12 or newer
+#set(BUILD_DATE "YYYY-MM-DD HH:MM")
+set(BUILD_DATE "\"__DATE__ \" \"__TIME__\"")
+# TODO: short SHA1 from upstream queso git repo:
+set(BUILD_VERSION "N/A")
 set(VERSION 
   "${GENERIC_MAJOR_VERSION}.${GENERIC_MINOR_VERSION}.${GENERIC_MICRO_VERSION}")
 set(BUILD_DEVSTATUS "Development Build")
 set(CXX "${CMAKE_CXX_COMPILER}")
-# Following should depend on build type
+# TODO: Following should depend on build type
 set(CXXFLAGS "${CMAKE_CXX_FLAGS}")
 
-set(GSL_LIBS ${GSL_LIBRARY_DIRS})
 
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/src/core/inc/queso.h.in 
+# -----
+# Generate include files
+# -----
+
+file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include/queso)
+
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/src/core/inc/queso.h.in
   ${CMAKE_CURRENT_BINARY_DIR}/include/queso/queso.h)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config_queso.h.cmake.in
+  ${CMAKE_CURRENT_BINARY_DIR}/include/queso/config_queso.h)
 
 
 # -----
@@ -90,7 +115,7 @@ set(BUILD_SHARED_LIBS TRUE CACHE BOOL "QUESO building shared libraries")
 
 
 # -----
-# Create libraries
+# Create libraries and copy headers
 # -----
 
 set(queso_sources)
