--- a/queso/config_queso.h.cmake.in
+++ b/queso/config_queso.h.cmake.in
@@ -77,7 +77,7 @@
 // QUESO_HAVE_HDF5
 
 /* Define to 1 if you have the <inttypes.h> header file. */
-// QUESO_HAVE_INTTYPES_H
+#cmakedefine QUESO_HAVE_INTTYPES_H
 
 /* Define if LIBMESH is available */
 // QUESO_HAVE_LIBMESH
@@ -86,7 +86,7 @@
 // QUESO_HAVE_LIBMESH_SLEPC
 
 /* Define to 1 if you have the <memory.h> header file. */
-// QUESO_HAVE_MEMORY_H
+#cmakedefine QUESO_HAVE_MEMORY_H
 
 /* Define if you have the MPI library. */
 #cmakedefine QUESO_HAVE_MPI
@@ -95,19 +95,19 @@
 #cmakedefine QUESO_HAVE_STDINT_H
 
 /* Define to 1 if you have the <stdlib.h> header file. */
-// QUESO_HAVE_STDLIB_H
+#cmakedefine QUESO_HAVE_STDLIB_H
 
 /* Define to 1 if you have the <strings.h> header file. */
-// QUESO_HAVE_STRINGS_H
+#cmakedefine QUESO_HAVE_STRINGS_H
 
 /* Define to 1 if you have the <string.h> header file. */
-// QUESO_HAVE_STRING_H
+#cmakedefine QUESO_HAVE_STRING_H
 
 /* Define to 1 if you have the <sys/stat.h> header file. */
-// QUESO_HAVE_SYS_STAT_H
+#cmakedefine QUESO_HAVE_SYS_STAT_H
 
 /* Define to 1 if you have the <sys/types.h> header file. */
-// QUESO_HAVE_SYS_TYPES_H
+#cmakedefine QUESO_HAVE_SYS_TYPES_H
 
 /* Define if Trilinos is available */
 // QUESO_HAVE_TRILINOS
@@ -116,7 +116,7 @@
 // QUESO_HAVE_TRILINOS_VERSION_H
 
 /* Define to 1 if you have the <unistd.h> header file. */
-// QUESO_HAVE_UNISTD_H
+#cmakedefine QUESO_HAVE_UNISTD_H
 
 /* Define to the sub-directory in which libtool stores uninstalled libraries.
    */
