--- a/queso/config_queso.h.cmake.in
+++ b/queso/config_queso.h.cmake.in
@@ -41,7 +41,10 @@
 #define QUESO_HAVE_BOOST_MATH_SPECIAL_FUNCTIONS_HPP @QUESO_HAVE_BOOST@
 
 /* Define to 1 if you have <boost/program_options.hpp> */
-#define QUESO_HAVE_BOOST_PROGRAM_OPTIONS_HPP @QUESO_HAVE_BOOST@
+/* No longer using: #define QUESO_HAVE_BOOST_PROGRAM_OPTIONS_HPP @QUESO_HAVE_BOOST@ */
+
+/* Always prefer Getpot over Boost, which is deprecated */
+#define DISABLE_BOOST_PROGRAM_OPTIONS 1
 
 /* Define to 1 if you have <boost/scoped_ptr.hpp> */
 #define QUESO_HAVE_BOOST_SCOPED_PTR_HPP @QUESO_HAVE_BOOST@
