--- a/queso/test/Makefile.am
+++ b/queso/test/Makefile.am
@@ -75,6 +75,7 @@ check_PROGRAMS += SequenceExample_gsl
 check_PROGRAMS += BimodalExample_gsl
 check_PROGRAMS += test_fd_fallback
 check_PROGRAMS += test_custom_tk_am
+check_PROGRAMS += test_no_initial_point
 
 LDADD       = $(top_builddir)/src/libqueso.la
 
@@ -245,8 +246,10 @@ BimodalExample_gsl_CPPFLAGS = -I$(srcdir)/t04_bimodal $(AM_CPPFLAGS)
 test_custom_tk_am_SOURCES =
 test_custom_tk_am_SOURCES += custom_tk/adaptive_metropolis_main.C
 test_custom_tk_am_SOURCES += custom_tk/adaptive_metropolis.C
-test_custom_tk_am_SOURCES += test_custom_tk/adaptive_metropolis.h
+test_custom_tk_am_SOURCES += custom_tk/adaptive_metropolis.h
 test_custom_tk_am_CPPFLAGS = -I$(srcdir)/custom_tk $(AM_CPPFLAGS)
+
+test_no_initial_point_SOURCES = test_StatisticalInverseProblem/test_no_initial_point.C
 
 TESTS =
 TESTS += unit_driver
@@ -280,6 +283,7 @@ TESTS += test_SequenceOfVectorsErase
 TESTS += test_GaussianMean1DRegression
 TESTS += test_Regression/test_cobra_samples_diff.sh
 TESTS += test_gpmsa/test_gpmsa_samples_diff.sh
+TESTS += test_gpmsa/test_autoscaled.sh
 TESTS += test_StatisticalInverseProblem/test_LlhdTargetOutput.sh
 TESTS += test_Regression/test_jeffreys_samples_diff.sh
 TESTS += test_gsloptimizer
@@ -324,6 +328,7 @@ TESTS += t04_bimodal/rtest04.sh
 TESTS += test_fd_fallback
 TESTS += test_SequenceOfVectorsErase
 TESTS += test_custom_tk_am
+TESTS += test_no_initial_point
 
 if ! MPI_ENABLED
 XFAIL_TESTS = test_SequenceOfVectors/test_unifiedPositionsOfMaximum.sh
@@ -344,7 +349,10 @@ EXTRA_DIST += test_Regression/ctf_dat.txt
 EXTRA_DIST += test_Regression/dakota_pstudy.dat
 EXTRA_DIST += test_gpmsa/gpmsa_vector_input.txt
 EXTRA_DIST += test_gpmsa/test_gpmsa_samples_diff.sh
+EXTRA_DIST += test_gpmsa/test_autoscaled.sh
 EXTRA_DIST += test_gpmsa/test_gpmsa_vector_samples.m
+EXTRA_DIST += test_gpmsa/test_gpmsa_autoscaled_samples.m
+EXTRA_DIST += test_gpmsa/gpmsa_autoscaled_input.txt
 EXTRA_DIST += test_StatisticalInverseProblem/both_input.txt
 EXTRA_DIST += test_StatisticalInverseProblem/llhdout_input.txt
 EXTRA_DIST += test_StatisticalInverseProblem/targetout_input.txt
@@ -403,6 +411,7 @@ clean-local:
 	rm -rf $(top_builddir)/test/test_output_gaussian_likelihoods
 	rm -rf $(top_builddir)/test/test_gpmsa_cobra_output
 	rm -rf $(top_builddir)/test/test_gpmsa_vector_output
+	rm -rf $(top_builddir)/test/test_gpmsa_autoscaled_output
 	rm -rf $(top_builddir)/test/test_adaptedcov_output
 	rm -rf $(top_builddir)/test/test_outputNoInputFile
 	rm -rf $(top_builddir)/test/test_output_interp_surrogates
