Build sparsegrid library just like any other Dakota / Pecos TPL
No "fancy" static / PIC settings since there is no longer a driver for the Windows DLL
concepts suggested by Kitware several years ago.

--- a/VPISparseGrid/src/CMakeLists.txt
+++ b/VPISparseGrid/src/CMakeLists.txt
@@ -6,10 +6,8 @@ set(sparsegrid_LIB_SRCS
    sandia_sgmgg.cpp
 )
 
-add_library(sparsegrid STATIC ${sparsegrid_LIB_SRCS})
+add_library(sparsegrid ${sparsegrid_LIB_SRCS})
 # Compile for position-independent code for use in the higher-level Pecos shared lib
-set_target_properties(sparsegrid PROPERTIES POSITION_INDEPENDENT_CODE True)
-set_target_properties(sparsegrid PROPERTIES VERSION 4.2.0 SOVERSION 4)
 install(TARGETS sparsegrid EXPORT ${ExportTarget} DESTINATION lib)
 
 ########### install files ###############
