--- a/trilinos/packages/rol/adapters/arrayfire/src/CMakeLists.txt
+++ b/trilinos/packages/rol/adapters/arrayfire/src/CMakeLists.txt
@@ -36,4 +36,4 @@ IF (ROL_ENABLE_ArrayFireCPU)
  )
 ENDIF()
 
-INSTALL(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/${${PROJECT_NAME}_INSTALL_INCLUDE_DIR})
+INSTALL(FILES ${HEADERS} DESTINATION ${${PROJECT_NAME}_INSTALL_INCLUDE_DIR})
