--- a/trilinos/packages/rol/adapters/belos/src/CMakeLists.txt
+++ b/trilinos/packages/rol/adapters/belos/src/CMakeLists.txt
@@ -39,4 +39,4 @@ IF (ROL_ENABLE_Belos)
   )
 ENDIF()
 
-INSTALL(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/${${PROJECT_NAME}_INSTALL_INCLUDE_DIR})
+INSTALL(FILES ${HEADERS} DESTINATION ${${PROJECT_NAME}_INSTALL_INCLUDE_DIR})
