--- a/trilinos/packages/rol/adapters/minitensor/src/CMakeLists.txt
+++ b/trilinos/packages/rol/adapters/minitensor/src/CMakeLists.txt
@@ -67,4 +67,4 @@ IF (ROL_ENABLE_Boost AND ROL_ENABLE_MiniTensor)
   )
 ENDIF()
 
-INSTALL(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/${${PROJECT_NAME}_INSTALL_INCLUDE_DIR})
+INSTALL(FILES ${HEADERS} DESTINATION ${${PROJECT_NAME}_INSTALL_INCLUDE_DIR})
