HOPSPACK: Coerce installed files to follow Dakota layout
Redirect license to ${DAKOTA_TOPFILES_INSTALL} and examples to
${DAKOTA_EXAMPLES_INSTALL}/hopspack/examples

--- a/hopspack/examples/2-linear-constraints/CMakeLists.txt
+++ b/hopspack/examples/2-linear-constraints/CMakeLists.txt
@@ -24,6 +24,6 @@ ADD_EXECUTABLE (
 
 #---- Installation instructions.
 INSTALL (TARGETS linear_constraints
-         DESTINATION examples/2-linear-constraints)
+         DESTINATION ${DAKOTA_EXAMPLES_INSTALL}/hopspack/examples/2-linear-constraints)
 INSTALL (FILES ${HOPSPACK_SOURCE_DIR}/${PARAMS_FILE_NAME}
-         DESTINATION examples/2-linear-constraints)
+         DESTINATION ${DAKOTA_EXAMPLES_INSTALL}/hopspack/examples/2-linear-constraints)
