--- a/hopspack/examples/1-var-bnds-only/CMakeLists.txt
+++ b/hopspack/examples/1-var-bnds-only/CMakeLists.txt
@@ -9,6 +9,7 @@
 #   the U.S. Government retains certain rights in this software.
 # ************************************************************************
 
+include(ModifyTargetRpath)
 
 #---- Copy the parameters file to the target location.
 SET (PARAMS_FILE_NAME examples/1-var-bnds-only/example1_params.txt)
@@ -25,5 +26,6 @@ ADD_EXECUTABLE (
 #---- Installation instructions.
 INSTALL (TARGETS var_bnds_only
          DESTINATION ${DAKOTA_EXAMPLES_INSTALL}/examples/hopspack/1-var-bnds-only)
+ModifyTargetRpath( var_bnds_only 5)
 INSTALL (FILES ${HOPSPACK_SOURCE_DIR}/${PARAMS_FILE_NAME}
          DESTINATION ${DAKOTA_EXAMPLES_INSTALL}/examples/hopspack/1-var-bnds-only)
