--- a/hopspack/examples/3-degen-linear-constraints/CMakeLists.txt
+++ b/hopspack/examples/3-degen-linear-constraints/CMakeLists.txt
@@ -9,6 +9,7 @@
 #   the U.S. Government retains certain rights in this software.
 # ************************************************************************
 
+include(ModifyTargetRpath)
 
 #---- Copy the parameters file to the target location.
 SET (PARAMS_FILE_NAME examples/3-degen-linear-constraints/example3_params.txt)
@@ -25,5 +26,6 @@ ADD_EXECUTABLE (
 #---- Installation instructions.
 INSTALL (TARGETS degen_linear_constraints
          DESTINATION ${DAKOTA_EXAMPLES_INSTALL}/examples/hopspack/3-degen-linear-constraints)
+ModifyTargetRpath( degen_linear_constraints 5)
 INSTALL (FILES ${HOPSPACK_SOURCE_DIR}/${PARAMS_FILE_NAME}
          DESTINATION ${DAKOTA_EXAMPLES_INSTALL}/examples/hopspack/3-degen-linear-constraints)
