--- a/acro/packages/CMakeLists.txt
+++ b/acro/packages/CMakeLists.txt
@@ -103,7 +103,8 @@ if(HAVE_BOOST)
     #message( "in ${CMAKE_CURRENT_BINARY_DIR} Boost_DIR already set to ${Boost_DIR}" )
     include_directories(${Boost_INCLUDE_DIR} ${Boost_INCLUDE_DIRS})
   else()
-    find_package(Boost COMPONENTS signals)
+    # BMA: Removed COMPONENTS signals as signals2 is header-only
+    find_package(Boost)
     if(Boost_FOUND)
       include_directories(${Boost_INCLUDE_DIR} ${Boost_INCLUDE_DIRS})
     endif()
