DAK-1933 : Refine Demo Opt TPL
 - replace free function API with a class to allow state, eg
   parameters filename
 - better naming
 - add option to Dakota-Demo API (DemoOptimizer) to pass native Demo_Opt
   parameters filename

--- a/demo_tpl/src/CMakeLists.txt
+++ b/demo_tpl/src/CMakeLists.txt
@@ -1,12 +1,10 @@
 ## DEMO_TPL library sources.
 set(demo_tpl_HEADERS
-  execute.hpp
-  initialize.hpp
+  demo_opt.hpp
 )
 
 set(demo_tpl_SOURCES
-  execute.cpp
-  initialize.cpp
+  demo_opt.cpp
 )
 
 ## Set the DEMO_TPL library name.
