--- a/C3/examples/cantilever/CMakeLists.txt
+++ b/C3/examples/cantilever/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required (VERSION 2.6)
 
 
-add_executable(cantilever cantilever.c)
-target_link_libraries(cantilever -g
+add_executable(c3_cantilever cantilever.c)
+target_link_libraries(c3_cantilever -g
   c3
   ${blas_lapack}
   -lm)
