DAK-2566 : Update Demo TPL docs
 - removed README.txt
 - added a Quickstart blurb to README
 - updated code snippets in README to reflect current state of code

I verified that this renders acceptably (to me) as both markdown and
html with the latter generated using the 'make docs-doxygen' toolchain.

I think things are in good enough shape for Patty and me to iterate
until the buzzer.

--- a/demo_tpl/src/CMakeLists.txt
+++ b/demo_tpl/src/CMakeLists.txt
@@ -10,4 +10,5 @@ set(demo_tpl_SOURCES
 ## Set the DEMO_TPL library name.
 add_library(demo_tpl ${demo_tpl_SOURCES})
 
+# Define install targets for "make install"
 install(TARGETS demo_tpl EXPORT ${ExportTarget} DESTINATION lib)
