--- a/muq2/cmake/builds/user-config.jam.in
+++ b/muq2/cmake/builds/user-config.jam.in
@@ -1,1 +1,1 @@
-using @BOOST_TOOLSET_NAME@ : muq : @CMAKE_CXX_COMPILER@ : <cxxflags>-std=c++11;
+using @BOOST_TOOLSET_NAME@ : muq : @CMAKE_CXX_COMPILER@ : ;
