--- a/muq2/CMakeLists.txt
+++ b/muq2/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 3.10)
 
-if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.24.0") 
+if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.24.0")
     cmake_policy(SET CMP0135 NEW)
 endif()
 
@@ -202,6 +202,4 @@ if(DOXYGEN_FOUND)
 
 	endif(Python3_Interpreter_FOUND)
 endif(DOXYGEN_FOUND)
-endif()
-
-#add_subdirectory(examples EXCLUDE_FROM_ALL)
+endif(MUQ_ENABLE_DOCS)
