--- a/demo_tpl/src/CMakeLists.txt
+++ b/demo_tpl/src/CMakeLists.txt
@@ -1,3 +1,4 @@
+
 ## DEMO_TPL library sources.
 set(demo_tpl_HEADERS
   demo_opt.hpp
@@ -8,7 +9,7 @@ set(demo_tpl_SOURCES
 )
 
 ## Set the DEMO_TPL library name.
-add_library(demo_tpl ${demo_tpl_SOURCES})
+add_library(demo_tpl ${demo_tpl_SOURCES} ${demo_tpl_HEADERS})
 
 # Define install targets for "make install"
 install(TARGETS demo_tpl EXPORT ${ExportTarget} DESTINATION lib)
