DP-1178 : attempt fix for MUQ cpack errors
 - remove use of CMAKE_INSTALL_PREFIX in DESTINATION specs
 - fix python paths to be relative

This should work without having to resort to:

  CPACK_SET_DESTDIR=TRUE

--- a/muq2/CMakeLists.txt
+++ b/muq2/CMakeLists.txt
@@ -119,7 +119,7 @@ configure_file(cmake/MUQConfig.cmake.in "${PROJECT_BINARY_DIR}${CMAKE_FILES_DIRE
 
 # Install the MUQConfig.cmake file
 install(FILES "${PROJECT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/${CMAKE_PROJECT_NAME}Config.cmake"
-        DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/cmake/${CMAKE_PROJECT_NAME}"
+        DESTINATION "lib/cmake/${CMAKE_PROJECT_NAME}"
 	    COMPONENT dev)
 
 # Install the pymuq libraries
@@ -132,21 +132,21 @@ install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/modules/PythonPackage/"
 
 # Install the export set for use with the install-tree
 install(EXPORT ${CMAKE_PROJECT_NAME}Depends
-        DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/cmake/${CMAKE_PROJECT_NAME}"
+        DESTINATION "lib/cmake/${CMAKE_PROJECT_NAME}"
 	    COMPONENT dev)
 
 # install all the MUQ headers -- may be better off installing for each package individually
 install(DIRECTORY MUQ
-        DESTINATION "${CMAKE_INSTALL_PREFIX}/include"
+        DESTINATION "include"
 	      FILES_MATCHING PATTERN "*.h")
 
 # install the python libraries -- Is there a way to avoid copying this for each library?
 #install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/modules/Approximation/python/pymuqApproximation/"
-#        DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/pymuqApproximation"
+#        DESTINATION "lib/pymuqApproximation"
 #        PATTERN "wrappers/" EXCLUDE)
 
 install(DIRECTORY spdlog
-        DESTINATION "${CMAKE_INSTALL_PREFIX}/include"
+        DESTINATION "include"
 	    FILES_MATCHING PATTERN "*.h")
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${INSTALL_LIB_DIR})
