Add owner write permissions to installed files

--- a/hopspack/examples/CMakeLists.txt
+++ b/hopspack/examples/CMakeLists.txt
@@ -20,4 +20,4 @@ ADD_SUBDIRECTORY (5-multi-start)
 #---- Installation instructions.
 INSTALL (FILES README.txt
          DESTINATION "${DAKOTA_EXAMPLES_INSTALL}/examples/hopspack/"
-         PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
+         PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
