--- a/hopspack/src/src-citizens/CMakeLists.txt
+++ b/hopspack/src/src-citizens/CMakeLists.txt
@@ -51,5 +51,5 @@ IF (HAVE_CDDLIB)
 
   INSTALL (FILES citizen-gss/cddlib/LICENSE_CDDLIB
            DESTINATION .
-           PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
+           PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
 ENDIF()
