--- a/hopspack/test/penalty-tests/CMakeLists.txt
+++ b/hopspack/test/penalty-tests/CMakeLists.txt
@@ -41,4 +41,4 @@ INSTALL (TARGETS HOPSPACK_main_penalty_tests
 INSTALL (FILES README.txt
          DESTINATION test
          RENAME README_penalty_tests.txt
-         PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
+         PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
