--- a/hopspack/src/CMakeLists.txt
+++ b/hopspack/src/CMakeLists.txt
@@ -95,4 +95,4 @@ ENDIF (INSTALL_HEADERS)
 
 INSTALL (FILES LICENSE_HOPSPACK
          DESTINATION ${DAKOTA_TOPFILES_INSTALL}
-         PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
+         PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
