--- a/hopspack/test/lapack-tests/CMakeLists.txt
+++ b/hopspack/test/lapack-tests/CMakeLists.txt
@@ -41,4 +41,4 @@ INSTALL (TARGETS HOPSPACK_main_lapack_tests
 INSTALL (FILES README.txt
          DESTINATION test
          RENAME README_lapack_tests.txt
-         PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
+         PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
